ehisqlgen 1.13.2 (2018-01-16)
---------------------------
- support parameters in sql scripts read by SqlReader
- skip ';' in DbUtility.readSqlStmt(); not part of SQL statement

ehisqlgen 1.12.0 (2017-11-28)
---------------------------
- PG: added ARRAY support

ehisqlgen 1.11.2 (2017-08-18)
---------------------------
- added DbUtility.fgdbTableExists()

ehisqlgen 1.11.1 (2017-06-22)
---------------------------
- PG: unique constraints changed to ST_AsBinary() for geometries 

ehisqlgen 1.11.0 (2017-06-19)
---------------------------
- added DbUtility, moved from ili2db

ehisqlgen 1.10.0 (2017-04-02)
---------------------------
- add DbColBlob
- add DbColXml
- fixed: make index name unique per schema 

ehisqlgen 1.9.0 (2016-12-21)
---------------------------
- add DbColNumber.min, max
- add DbColDecimal.min, max
- fixed FK constraint in GeoPackageGenerator

ehisqlgen 1.8.0 (2016-11-25)
---------------------------
- make GeneratorJdbc.addDropLine() public
- make GeneratorJdbc.addCreateLine() public

ehisqlgen 1.7.0 (2016-11-18)
---------------------------
- make constraint name unique and respect given max length

ehisqlgen 1.6.0 (2016-11-16)
---------------------------
- DbColVarchar default size set to UNLIMITED

ehisqlgen 1.5.0 (2016-08-09)
---------------------------
- PG: map DbColId to bigint

ehisqlgen 1.4.1 (2016-03-07)
---------------------------
- GPKG: fixed mapping of DbColNumber to INTEGER

ehisqlgen 1.4.0 (2016-01-21)
---------------------------
- added UNIQUE support to GPKG and PostGIS driver

ehisqlgen 1.3.0 (2016-01-04)
---------------------------
- added GeoPackage support

ehisqlgen 1.2.1 (2015-12-21)
---------------------------
- fixed missing geom index 
- MULTISURFACE added

ehisqlgen 1.2.0 (2015-09-16)
---------------------------
- DbColumn.index added to support CREATE INDEX on any column
- DbColumn.referencedTable added to support REFERENCES TO
- DbColumn.onDeleteAction added to support ON DELETE CASCADE/RESTRICT