@@ -1,3 +1,7 @@
+LATEST SNAPSHOT
+---------------
+- GPKG: verify that create table statements are in a valid order
+
 ehisqlgen 1.13.2 (2018-01-16)
 ---------------------------
 - support parameters in sql scripts read by SqlReader
